# atdd-bmad-template

./: .env.example  .gitignore  404.html  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.claude/: CLAUDE.md
.claude/conventions/: feature-file-standards.md  project-management.md  prompt-eval-conventions.md  step-definition-patterns.md  test-organization.md
.github/workflows/: test-and-update-status.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
docs/: architecture.md  bdd-guide.md  ci-integration.md  contract-testing.md  getting-started.md  project-structure.md  prompt-eval-guide.md  testing-levels.md
scripts/: update-story-status.py
search/: search_index.json
spec-web/: build-living-docs.py  mkdocs.yml
stylesheets/: living-docs.css
support/factories/: user.factory.ts
support/fixtures/: api.fixtures.ts  base.fixtures.ts
support/helpers/: schema-validators.ts
tags/P0/: index.html
tags/P1/: index.html
tags/acceptance/: index.html
tags/api/: index.html
tags/context-precision/: index.html
tags/context-recall/: index.html
tags/deterministic/: index.html
tags/eventual-consistency/: index.html
tags/factual/: index.html
tags/faithfulness/: index.html
tags/integration/: index.html
tags/llm-judge/: index.html
tags/negative/: index.html
tags/prompt-eval/: index.html
tags/rag/: index.html
tests/prompt-eval/python/: conftest.py  pyproject.toml  test_deepeval_faithfulness.py  test_ragas_rag.py
(+36 files in other folders)
